Bug tracker at http://code.google.com/p/psutil/issues

0.6.2 - XXXX-XX-XX
------------------

BUG FIXES

 * Issue 319: (Linux) process get_memory_maps() raises KeyError 'Anonymous' on
 Debian squeeze.


0.6.1 - 2012-08-16
------------------

NEW FEATURES

 * Issue 316: process cmdline property now makes a better job at guessing the
   process executable from the cmdline.

BUG FIXES

 * Issue 316: process exe was resolved in case it was a symlink.
 * Issue 318: python 2.4 compatibility was broken.

API CHANGES

 * process exe can now return an empty string instead of raising AccessDenied.
 * process exe is no longer resolved in case it's a symlink.


0.6.0 - 2012-08-13
------------------

NEW FEATURES

 * Issue 216: (UNIX) get_connections() UNIX sockets support.
 * Issue 220: (BSD) get_connections() has been rewritten in C and no longer
   requires lsof.
 * Issue 222: (OSX) add support for process cwd.
 * Issue 261: process extended memory info.
 * Issue 295: (OSX) process executable path is now determined by asking the OS
   instead of being guessed from process cmdline.
 * Issue 297: (OSX) the Process methods below were always raising AccessDenied
   for any process except the current one. Now this is no longer true. Also they
   are 2.5x faster.
    - name
    - get_memory_info()
    - get_memory_percent()
    - get_cpu_times()
    - get_cpu_percent()
    - get_num_threads()
 * Issue 300: examples/pmap.py script.
 * Issue 301: process_iter() now yields processes sorted by their PIDs.
 * Issue 302: process number of voluntary and involuntary context switches.
 * Issue 303: (Windows) the Process methods below were always raising
   AccessDenied for any process not owned by current user. Now this is no longer
   true:
    - create_time
    - get_cpu_times()
    - get_cpu_percent()
    - get_memory_info()
    - get_memory_percent()
    - get_num_handles()
    - get_io_counters()
 * Issue 305: add examples/netstat.py script.